--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "data-forge-plot": "^1.0.2",
+    "github-calendar": "^2.2.9",
     "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-charts": "^3.0.0-beta.36",
