--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://meshtatsuo.github.io/react-portfolio",
+  "homepage": "http://meshtatsuo.github.io",
   "dependencies": {
     "@plotex/render-image": "^1.0.21",
     "@testing-library/jest-dom": "^5.16.4",
