--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "data-forge-plot": "^1.0.2",
+    "emailjs-com": "^3.2.0",
     "github-calendar": "^2.2.9",
     "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-charts": "^3.0.0-beta.36",
     "react-dom": "^18.1.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
